--- a/InstallOptions/WarTechIIC/settings.json
+++ b/InstallOptions/WarTechIIC/settings.json
@@ -43,7 +43,8 @@
     "GhostBearDominion": 1.5,
     "ClanStoneLion": 2.0,
     "EscorpionImperio": 2.0,
-    "RavenAlliance": 2.0
+    "RavenAlliance": 2.0,
+    "Society": 2.0
   },
   "hatred": {},
   "cantBeAttacked": [],
@@ -109,7 +110,8 @@
     "ClanStoneLion": 25,
     "EscorpionImperio": 25,
     "ClanWolfInExile": 25,
-    "RavenAlliance": 25
+    "RavenAlliance": 25,
+    "Society": 25
   },
   "defenseStrength": {
     "ClanBurrock": 13,
@@ -132,7 +134,8 @@
     "ComStar": 22,
     "ClanStoneLion": 13,
     "EscorpionImperio": 13,
-    "RavenAlliance": 13
+    "RavenAlliance": 13,
+    "Society": 13
   },
   "raidStrengthMultiplier": 0.75,
   "minReputationToHelpAttack": "INDIFFERENT",
@@ -227,6 +230,9 @@
     "ClanWolf": [
       "Wolf_invasion_corridor"
     ],
+    "Society": [
+      "WoR_Attack"
+    ],
     "WordOfBlake": [
       "planet_other_comstar"
     ],
@@ -273,20 +279,20 @@
     "TaurianConcordat": "RT_WarTech_Periphery",
     "Tortuga": "RT_WarTech_Periphery",
     "Valkyrate": "RT_WarTech_Periphery",
-    "Rim":"RT_WarTech_Periphery",
-    "FiltveltCoalition":"RT_WarTech_Periphery",
-    "FroncReaches":"RT_WarTech_Periphery",
-    "CalderonProtectorate":"RT_WarTech_Periphery",
+    "Rim": "RT_WarTech_Periphery",
+    "FiltveltCoalition": "RT_WarTech_Periphery",
+    "FroncReaches": "RT_WarTech_Periphery",
+    "CalderonProtectorate": "RT_WarTech_Periphery",
     "WordOfBlake": "RT_WarTech_IS",
     "ComStar": "RT_WarTech_IS",
     "Davion": "RT_WarTech_IS",
     "Marik": "RT_WarTech_IS",
-    "MarikStewart":"RT_WarTech_IS",
-    "RegulanFiefs":"RT_WarTech_IS",
-    "TamarindAbbey":"RT_WarTech_IS",
-    "DuchyOfAndurien":"RT_WarTech_IS",
-    "OrienteProtectorate":"RT_WarTech_IS",
-    "RimCommonality":"RT_WarTech_IS",
+    "MarikStewart": "RT_WarTech_IS",
+    "RegulanFiefs": "RT_WarTech_IS",
+    "TamarindAbbey": "RT_WarTech_IS",
+    "DuchyOfAndurien": "RT_WarTech_IS",
+    "OrienteProtectorate": "RT_WarTech_IS",
+    "RimCommonality": "RT_WarTech_IS",
     "Kurita": "RT_WarTech_IS",
     "Liao": "RT_WarTech_IS",
     "Ives": "RT_WarTech_IS",
@@ -338,20 +344,20 @@
     "TaurianConcordat": "RT_WarTech_Periphery",
     "Tortuga": "RT_WarTech_Periphery",
     "Valkyrate": "RT_WarTech_Periphery",
-    "Rim":"RT_WarTech_Periphery",
-    "FiltveltCoalition":"RT_WarTech_Periphery",
-    "FroncReaches":"RT_WarTech_Periphery",
-    "CalderonProtectorate":"RT_WarTech_Periphery",
+    "Rim": "RT_WarTech_Periphery",
+    "FiltveltCoalition": "RT_WarTech_Periphery",
+    "FroncReaches": "RT_WarTech_Periphery",
+    "CalderonProtectorate": "RT_WarTech_Periphery",
     "WordOfBlake": "RT_WarTech_IS",
     "ComStar": "RT_WarTech_IS",
     "Davion": "RT_WarTech_IS",
     "Marik": "RT_WarTech_IS",
-    "MarikStewart":"RT_WarTech_IS",
-    "RegulanFiefs":"RT_WarTech_IS",
-    "TamarindAbbey":"RT_WarTech_IS",
-    "DuchyOfAndurien":"RT_WarTech_IS",
-    "OrienteProtectorate":"RT_WarTech_IS",
-    "RimCommonality":"RT_WarTech_IS",
+    "MarikStewart": "RT_WarTech_IS",
+    "RegulanFiefs": "RT_WarTech_IS",
+    "TamarindAbbey": "RT_WarTech_IS",
+    "DuchyOfAndurien": "RT_WarTech_IS",
+    "OrienteProtectorate": "RT_WarTech_IS",
+    "RimCommonality": "RT_WarTech_IS",
     "Kurita": "RT_WarTech_IS",
     "Liao": "RT_WarTech_IS",
     "Ives": "RT_WarTech_IS",
@@ -383,6 +389,7 @@
     "RavenAlliance": "RT_WarTech_Clan"
   },
   "systemAggressionByTag": {
+    "WIICDoNotAttack": 0,
     "planet_factory": 2
   },
   "addStrengthTags": {
