--- a/Optionals/RTOLegendsMechs/OperationRevival/Pilot/pilot_unknown_mw.json
+++ b/Optionals/RTOLegendsMechs/OperationRevival/Pilot/pilot_unknown_mw.json
@@ -32,7 +32,7 @@
   "PilotTags": {
     "items": [
       "pilot_nomech_crew",
-      "pilot_medicalcoma",
+      "pilot_medical_amnesia",
       "name_unknown_mechwarrior",
       "pilot_noLAM",
       "pilot_novtol",
