New Wraiths from Shrapnel 17

--- a/Core/MechAffinity/AffinityDefs/AffinityDef_chassis_Scrapper.json
+++ b/Core/MechAffinity/AffinityDefs/AffinityDef_chassis_Scrapper.json
@@ -22,6 +22,7 @@
       "bane_100",
       "Arbiter_35",
       "Wraith_55",
+      "WraithWing_55",
       "kitfox_30",
       "Arcticfox_30",
       "phoenixhawkiic_80",
