--- a/DLC/RogueFlashPointModule/settings.json
+++ b/DLC/RogueFlashPointModule/settings.json
@@ -99,6 +99,7 @@
 		"KitteryPrefecture",
 		"SLDFinExile",
 		"RoguePirates",
-		"BerganIndustries"
+		"BerganIndustries",
+		"berganindustries"
 	]
 }
