--- a/Core/IRTweaks/Menus/CareerDifficultySettings.json
+++ b/Core/IRTweaks/Menus/CareerDifficultySettings.json
@@ -3463,6 +3463,30 @@
           ]
         },
         {
+          "ID": "diff_TheadLightly",
+          "Name": "Tread Lightly",
+          "TelemetryEventDesc": "",
+          "DifficultyValue": 0,
+          "CareerScoreModifier": 0,
+          "DifficultyConstants": [
+            {
+              "ConstantType": "CareerMode",
+              "ConstantName": "StartingSystems",
+              "ConstantValue": "Terra"
+            },
+            {
+              "ConstantType": "CareerMode",
+              "ConstantName": "StartingRandomMechLists",
+              "ConstantValue": "itemCollection_Mechs_Starting_TreadLightly_M1,itemCollection_Mechs_Starting_TreadLightly_M30,itemCollection_Mechs_Starting_TreadLightly_V1,itemCollection_Mechs_Starting_TreadLightly_V35,itemCollection_Mechs_Starting_TreadLightly_VTOL"
+            },
+            {
+              "ConstantType": "CareerMode",
+              "ConstantName": "FactionReputation",
+              "ConstantValue": "MercenaryReviewBoard:20,AuriganPirates:20,WordOfBlake:20,ComStar:20"
+            }
+          ]
+        },
+        {
           "ID": "diff_Tortuga",
           "Name": "Tortuga",
           "TelemetryEventDesc": "",
