AddahBearing Event Series
Upgrade for Pilot Bearing (old version was reliant more on Tech Skill, which is not a massively sought after trait).  Event allows for the upgrading of Bearing to BA Bearing.  Requires player to find Bearing before event will trigger.  When BA Bearing returns, player can accept them back or reject them.

BA Bearing loses "RogueBotMocker" ability, gains "PitytheFool" ability and is Battle Armor skilled and focused.  Adds new UNIQUE Battle Armor, the BA Baracas, based off the Rogue Bear Battle Armor.

Adds GMC Vandura transport vehilce;  Adds Boscoe "BA" Banacek Battle Armor/Vehicle pilot; Adds Murcodk "Howling Mad" Banacek, Templeton "Face" Banacek and Hannibal "Smith" Banacek pilots;  Adds lancemate synergies to other BA when BA Bearing is dropped in combat.  Further synergies added if BA Bearing drops with the rest of BA-Team: Boscoe, Murdock, Face and Smith in combat together.

--- a/Core/Abilifier/EffectDataExtensions.json
+++ b/Core/Abilifier/EffectDataExtensions.json
@@ -491,5 +491,65 @@
 		"TargetComponentTagMatch": [
 			"Artillery"
 		]
+	},
+	"StatusEffect-BA_Bearing": {
+		"TargetCollectionsForSearch": {
+			"Unit": {
+				"MustMatchAll": false,
+				"TargetCollectionTagMatch": [
+					"unit_battlearmor"
+				]
+			}
+		}
+	},
+	"pilot_pitytheFool_StabilityDamage": {
+		"TargetCollectionsForSearch": {
+			"Unit": {
+				"MustMatchAll": false,
+				"TargetCollectionTagMatch": [
+					"unit_BABaracas"
+				]
+			}
+		}
+	},
+	"pilot_pitytheFool_MoreDamage": {
+		"TargetCollectionsForSearch": {
+			"Unit": {
+				"MustMatchAll": false,
+				"TargetCollectionTagMatch": [
+					"unit_BABaracas"
+				]
+			}
+		}
+	},
+	"pilot_pitytheFool_HitChance": {
+		"TargetCollectionsForSearch": {
+			"Unit": {
+				"MustMatchAll": false,
+				"TargetCollectionTagMatch": [
+					"unit_BABaracas"
+				]
+			}
+		}
+	},
+	"pilot_pitytheFool_MorePunch": {
+		"TargetCollectionsForSearch": {
+			"Unit": {
+				"MustMatchAll": false,
+				"TargetCollectionTagMatch": [
+					"unit_BABaracas"
+				]
+			}
+		}
+	},
+	"pilot_pitytheFool_WalkSpeed": {
+		"TargetCollectionsForSearch": {
+			"Unit": {
+				"MustMatchAll": false,
+				"TargetCollectionTagMatch": [
+					"unit_BABaracas"
+				]
+			}
+		}
 	}
 }
