--- a/Core/DropCostsEnhanced/settings.json
+++ b/Core/DropCostsEnhanced/settings.json
@@ -68,7 +68,8 @@
         "solaris_offseason_4x4ctf_mech_8",
         "solaris_offseason_4x4freeforall_mech_2",
         "solaris_offseason_4x4freeforall_mech_5",
-        "solaris_offseason_4x4freeforall_mech_8"
+        "solaris_offseason_4x4freeforall_mech_8",
+        "ThreeWayBattle_PositionalBearing"
   ],
   "difficultyCostModifiers" : [
   {
