--- a/Core/TisButAScratch/settings.json
+++ b/Core/TisButAScratch/settings.json
@@ -51,6 +51,13 @@
         "name_Burtonias"
       ],
       "PilotTagDisplay": "ACCESS DENIED:  Burtonias' Biometric Access Code Required.  No one else can pilot his mech in combat."
+    },
+    "RequireBAB": {
+      "ComponentTag": "RequireBAB",
+      "PilotTags": [
+        "name_BABearing"
+      ],
+      "PilotTagDisplay": "ACCESS DENIED:  Bearing's Biometric Access Code Required.  No one else can pilot his Battle Armor in combat."
     }
   },
   "internalDmgStatName": "InjureOnStructDmg",
