Add GlobalContractPreserve to settings
also add new Check HPG button

--- a/InstallOptions/PersistentMapClient/settings.json
+++ b/InstallOptions/PersistentMapClient/settings.json
@@ -6,6 +6,7 @@
 	"priorityContactPayPercentage": 1.5,
 	"Season": "Rayson05",
 	"requestTimeout": 25000,
+	"GlobalContractPreserve": [],
 	"eventMarkers" : [
 	  {
 		"type" : "OnlineEvent",
