--- a/Core/RogueTechCore/events/event_mw_jinxedAlbatross.json
+++ b/Core/RogueTechCore/events/event_mw_jinxedAlbatross.json
@@ -28,7 +28,27 @@
       }
     ]
   },
-  "AdditionalRequirements": [],
+  "AdditionalRequirements": [
+    {
+      "Scope": "Company",
+      "RequirementTags": {
+        "items": null,
+        "tagSetSourceFile": ""
+      },
+      "ExclusionTags": {
+        "items": null,
+        "tagSetSourceFile": ""
+      },
+      "RequirementComparisons": [
+        {
+          "obj": "Funds",
+          "op": "GreaterThan",
+          "val": 20000,
+          "valueConstant": "20000"
+        }
+      ]
+    }
+  ],
   "AdditionalObjects": [
     {
       "Scope": "SecondaryMechWarrior",
@@ -121,6 +141,13 @@
                   "value": "-5000",
                   "set": false,
                   "valueConstant": null
+                },
+                {
+                  "typeString": "System.Int32",
+                  "name": "26_Alpha",
+                  "value": "1",
+                  "set": false,
+                  "valueConstant": null
                 }
               ],
               "Actions": null,
@@ -148,6 +175,25 @@
                   "additionalValues": null
                 }
               ],
+              "ForceEvents": null,
+              "TemporaryResult": false,
+              "ResultDuration": 0
+            },
+            {
+              "Scope": "SecondaryMechWarrior",
+              "Requirements": null,
+              "AddedTags": {
+                "tagSetSourceFile": "",
+                "items": [
+                  "26_Alpha"
+                ]
+              },
+              "RemovedTags": {
+                "tagSetSourceFile": "",
+                "items": null
+              },
+              "Stats": null,
+              "Actions": null,
               "ForceEvents": null,
               "TemporaryResult": false,
               "ResultDuration": 0
@@ -204,6 +250,13 @@
                   "value": "-10",
                   "set": false,
                   "valueConstant": null
+                },
+                {
+                  "typeString": "System.Int32",
+                  "name": "26_Alpha",
+                  "value": "1",
+                  "set": false,
+                  "valueConstant": null
                 }
               ],
               "Actions": null,
@@ -216,7 +269,8 @@
               "Requirements": null,
               "AddedTags": {
                 "items": [
-                  "pilot_rebellious"
+                  "pilot_rebellious",
+                  "26_Alpha"
                 ],
                 "tagSetSourceFile": "Tags/PilotTags"
               },
@@ -266,6 +320,13 @@
                   "value": "-10",
                   "set": false,
                   "valueConstant": null
+                },
+                {
+                  "typeString": "System.Int32",
+                  "name": "26_Alpha",
+                  "value": "1",
+                  "set": false,
+                  "valueConstant": null
                 }
               ],
               "Actions": null,
@@ -278,7 +339,8 @@
               "Requirements": null,
               "AddedTags": {
                 "items": [
-                  "pilot_rebellious"
+                  "pilot_rebellious",
+                  "26_Alpha"
                 ],
                 "tagSetSourceFile": "Tags/PilotTags"
               },
@@ -359,6 +421,31 @@
           "Weight": 75,
           "Results": [
             {
+              "Scope": "Company",
+              "Requirements": null,
+              "AddedTags": {
+                "tagSetSourceFile": "",
+                "items": []
+              },
+              "RemovedTags": {
+                "tagSetSourceFile": "",
+                "items": []
+              },
+              "Stats": [
+                {
+                  "typeString": "System.Int32",
+                  "name": "26_Alpha",
+                  "value": "1",
+                  "set": false,
+                  "valueConstant": null
+                }
+              ],
+              "Actions": null,
+              "ForceEvents": null,
+              "TemporaryResult": false,
+              "ResultDuration": 0
+            },
+            {
               "Scope": "MechWarrior",
               "Requirements": null,
               "AddedTags": {
@@ -395,6 +482,25 @@
               "ForceEvents": null,
               "TemporaryResult": true,
               "ResultDuration": 30
+            },
+            {
+              "Scope": "SecondaryMechWarrior",
+              "Requirements": null,
+              "AddedTags": {
+                "tagSetSourceFile": "",
+                "items": [
+                  "26_Alpha"
+                ]
+              },
+              "RemovedTags": {
+                "tagSetSourceFile": "",
+                "items": null
+              },
+              "Stats": null,
+              "Actions": null,
+              "ForceEvents": null,
+              "TemporaryResult": false,
+              "ResultDuration": 0
             }
           ]
         },
@@ -407,6 +513,31 @@
           },
           "Weight": 25,
           "Results": [
+            {
+              "Scope": "Company",
+              "Requirements": null,
+              "AddedTags": {
+                "tagSetSourceFile": "",
+                "items": []
+              },
+              "RemovedTags": {
+                "tagSetSourceFile": "",
+                "items": []
+              },
+              "Stats": [
+                {
+                  "typeString": "System.Int32",
+                  "name": "26_Alpha",
+                  "value": "1",
+                  "set": false,
+                  "valueConstant": null
+                }
+              ],
+              "Actions": null,
+              "ForceEvents": null,
+              "TemporaryResult": false,
+              "ResultDuration": 0
+            },
             {
               "Scope": "MechWarrior",
               "Requirements": null,
@@ -444,6 +575,25 @@
               "ForceEvents": null,
               "TemporaryResult": true,
               "ResultDuration": 90
+            },
+            {
+              "Scope": "SecondaryMechWarrior",
+              "Requirements": null,
+              "AddedTags": {
+                "tagSetSourceFile": "",
+                "items": [
+                  "26_Alpha"
+                ]
+              },
+              "RemovedTags": {
+                "tagSetSourceFile": "",
+                "items": null
+              },
+              "Stats": null,
+              "Actions": null,
+              "ForceEvents": null,
+              "TemporaryResult": false,
+              "ResultDuration": 0
             }
           ]
         }
@@ -556,8 +706,34 @@
                   "value": "1",
                   "set": false,
                   "valueConstant": "[rep_gain_small]"
+                },
+                {
+                  "typeString": "System.Int32",
+                  "name": "26_Alpha",
+                  "value": "1",
+                  "set": false,
+                  "valueConstant": null
                 }
               ],
+              "Actions": null,
+              "ForceEvents": null,
+              "TemporaryResult": false,
+              "ResultDuration": 0
+            },
+            {
+              "Scope": "SecondaryMechWarrior",
+              "Requirements": null,
+              "AddedTags": {
+                "tagSetSourceFile": "",
+                "items": [
+                  "26_Alpha"
+                ]
+              },
+              "RemovedTags": {
+                "tagSetSourceFile": "",
+                "items": null
+              },
+              "Stats": null,
               "Actions": null,
               "ForceEvents": null,
               "TemporaryResult": false,
@@ -631,8 +807,34 @@
                   "value": "-2",
                   "set": false,
                   "valueConstant": "[rep_loss_medium]"
+                },
+                {
+                  "typeString": "System.Int32",
+                  "name": "26_Alpha",
+                  "value": "1",
+                  "set": false,
+                  "valueConstant": null
                 }
               ],
+              "Actions": null,
+              "ForceEvents": null,
+              "TemporaryResult": false,
+              "ResultDuration": 0
+            },
+            {
+              "Scope": "SecondaryMechWarrior",
+              "Requirements": null,
+              "AddedTags": {
+                "tagSetSourceFile": "",
+                "items": [
+                  "26_Alpha"
+                ]
+              },
+              "RemovedTags": {
+                "tagSetSourceFile": "",
+                "items": null
+              },
+              "Stats": null,
               "Actions": null,
               "ForceEvents": null,
               "TemporaryResult": false,
@@ -698,8 +900,34 @@
                   "value": "2",
                   "set": false,
                   "valueConstant": "[rep_gain_medium]"
+                },
+                {
+                  "typeString": "System.Int32",
+                  "name": "26_Alpha",
+                  "value": "1",
+                  "set": false,
+                  "valueConstant": null
                 }
               ],
+              "Actions": null,
+              "ForceEvents": null,
+              "TemporaryResult": false,
+              "ResultDuration": 0
+            },
+            {
+              "Scope": "SecondaryMechWarrior",
+              "Requirements": null,
+              "AddedTags": {
+                "tagSetSourceFile": "",
+                "items": [
+                  "26_Alpha"
+                ]
+              },
+              "RemovedTags": {
+                "tagSetSourceFile": "",
+                "items": null
+              },
+              "Stats": null,
               "Actions": null,
               "ForceEvents": null,
               "TemporaryResult": false,
