--- a/Optionals/Superheavys/Base/vehicle/vehicledef_PROJECT_SECTARIAN_SUPERHEAVY_TANK.json
+++ b/Optionals/Superheavys/Base/vehicle/vehicledef_PROJECT_SECTARIAN_SUPERHEAVY_TANK.json
@@ -22,6 +22,7 @@
       "kurita",
       "liao",
       "locals",
+      "ArcRoyalLibertyCoalition",
       "magistracyofcanopus",
       "marian",
       "marik",
