--- a/Optionals/Superheavys/Base/vehicle/vehicledef_PROJECT_SECTARIAN_SUPERHEAVY_TANK.json
+++ b/Optionals/Superheavys/Base/vehicle/vehicledef_PROJECT_SECTARIAN_SUPERHEAVY_TANK.json
@@ -12,6 +12,8 @@
       "Superheavy",
       "mr-resize-1.91",
       "auriganpirates",
+      "NewOberonConfederation",
+      "RimTerritories",
       "circinus",
       "comstar",
       "davion",
