--- a/Core/Abilifier/EffectDataExtensions.json
+++ b/Core/Abilifier/EffectDataExtensions.json
@@ -4,6 +4,11 @@
 			"VSPL"
 		]
 	},
+	"HAG-Accuracy": {
+		"TargetComponentTagMatch": [
+			"HAGR"
+		]
+	},
 	"BC Orssos": {
 		"TargetComponentTagMatch": [
 			"MMS"
