--- a/Optionals/Superheavys/Base/vehicle/vehicledef_PROJECT_SECTARIAN_SUPERHEAVY_TANK.json
+++ b/Optionals/Superheavys/Base/vehicle/vehicledef_PROJECT_SECTARIAN_SUPERHEAVY_TANK.json
@@ -37,7 +37,10 @@
       "RimCommonality",
       "RoguePirates",
       "solaris7",
-      "steiner",
+           "steiner",
+      "Tamar Pact",
+      "Timbuktu Collective",
+      "Vesper Marches",
       "TamarindAbbey",
       "taurianconcordat",
       "tortuga",
