--- a/Eras/DarkAge3131-/Base/mech/mechdef_boreas_BEA-B.json
+++ b/Eras/DarkAge3131-/Base/mech/mechdef_boreas_BEA-B.json
@@ -53,73 +53,73 @@
   "Locations": [
     {
       "Location": "Head",
-      "CurrentArmor": 45,
+      "CurrentArmor": 40,
       "CurrentRearArmor": 0,
       "CurrentInternalStructure": 16,
-      "AssignedArmor": 45,
+      "AssignedArmor": 40,
       "AssignedRearArmor": 0,
       "DamageLevel": "Functional"
     },
     {
       "Location": "LeftArm",
-      "CurrentArmor": 140,
+      "CurrentArmor": 110,
       "CurrentRearArmor": 0,
       "CurrentInternalStructure": 70,
-      "AssignedArmor": 140,
+      "AssignedArmor": 110,
       "AssignedRearArmor": 0,
       "DamageLevel": "Functional"
     },
     {
       "Location": "LeftTorso",
-      "CurrentArmor": 140,
-      "CurrentRearArmor": 65,
+      "CurrentArmor": 110,
+      "CurrentRearArmor": 35,
       "CurrentInternalStructure": 70,
-      "AssignedArmor": 140,
-      "AssignedRearArmor": 65,
+      "AssignedArmor": 110,
+      "AssignedRearArmor": 35,
       "DamageLevel": "Functional"
     },
     {
       "Location": "CenterTorso",
-      "CurrentArmor": 200,
-      "CurrentRearArmor": 85,
+      "CurrentArmor": 130,
+      "CurrentRearArmor": 100,
       "CurrentInternalStructure": 100,
-      "AssignedArmor": 200,
-      "AssignedRearArmor": 85,
+      "AssignedArmor": 130,
+      "AssignedRearArmor": 100,
       "DamageLevel": "Functional"
     },
     {
       "Location": "RightTorso",
-      "CurrentArmor": 140,
-      "CurrentRearArmor": 65,
+      "CurrentArmor": 110,
+      "CurrentRearArmor": 35,
       "CurrentInternalStructure": 70,
-      "AssignedArmor": 140,
-      "AssignedRearArmor": 65,
+      "AssignedArmor": 110,
+      "AssignedRearArmor": 35,
       "DamageLevel": "Functional"
     },
     {
       "Location": "RightArm",
-      "CurrentArmor": 140,
+      "CurrentArmor": 110,
       "CurrentRearArmor": 0,
       "CurrentInternalStructure": 70,
-      "AssignedArmor": 140,
+      "AssignedArmor": 110,
       "AssignedRearArmor": 0,
       "DamageLevel": "Functional"
     },
     {
       "Location": "LeftLeg",
-      "CurrentArmor": 140,
+      "CurrentArmor": 110,
       "CurrentRearArmor": 0,
       "CurrentInternalStructure": 70,
-      "AssignedArmor": 140,
+      "AssignedArmor": 110,
       "AssignedRearArmor": 0,
       "DamageLevel": "Functional"
     },
     {
       "Location": "RightLeg",
-      "CurrentArmor": 140,
+      "CurrentArmor": 110,
       "CurrentRearArmor": 0,
       "CurrentInternalStructure": 70,
-      "AssignedArmor": 140,
+      "AssignedArmor": 110,
       "AssignedRearArmor": 0,
       "DamageLevel": "Functional"
     }
@@ -147,35 +147,21 @@
       "DamageLevel": "Functional"
     },
     {
-      "MountedLocation": "LeftTorso",
+      "MountedLocation": "RightTorso",
       "ComponentDefID": "Weapon_LRM_20_Streak",
       "ComponentDefType": "Weapon",
       "HardpointSlot": 0,
       "DamageLevel": "Functional"
     },
     {
-      "MountedLocation": "LeftTorso",
+      "MountedLocation": "RightTorso",
       "ComponentDefID": "Ammo_AmmunitionBox_LRM_Streak",
       "ComponentDefType": "AmmunitionBox",
       "HardpointSlot": -1,
       "DamageLevel": "Functional"
     },
     {
-      "MountedLocation": "LeftTorso",
-      "ComponentDefID": "Ammo_AmmunitionBox_LRM_Streak",
-      "ComponentDefType": "AmmunitionBox",
-      "HardpointSlot": -1,
-      "DamageLevel": "Functional"
-    },
-    {
-      "MountedLocation": "LeftTorso",
-      "ComponentDefID": "Ammo_AmmunitionBox_LRM_Streak",
-      "ComponentDefType": "AmmunitionBox",
-      "HardpointSlot": -1,
-      "DamageLevel": "Functional"
-    },
-    {
-      "MountedLocation": "LeftTorso",
+      "MountedLocation": "RightTorso",
       "ComponentDefID": "Ammo_AmmunitionBox_LRM_Streak",
       "ComponentDefType": "AmmunitionBox",
       "HardpointSlot": -1,
