Revised RGoBoom event
Redesigned event to allow for more player agency
Argo Beta/Gamma pods locked behind purchasing an upgrade request at populated industry_manufacturing star systems;
Triggers an event where players can postpone upgrade, or chose from 1 of 3 "levels" of workmanship: 28% safe, 80% safe, 100% safe.  Lower levels are much cheaper, but have higher chance of a four bolts episode later on.  Premium level is top tier in cost, and immune to Four Bolts, for the specific upgrade

--- a/Core/RogueTechCore/events/event_mw_jinxedAlbatross.json
+++ b/Core/RogueTechCore/events/event_mw_jinxedAlbatross.json
@@ -141,13 +141,6 @@
                   "value": "-5000",
                   "set": false,
                   "valueConstant": null
-                },
-                {
-                  "typeString": "System.Int32",
-                  "name": "26_Alpha",
-                  "value": "1",
-                  "set": false,
-                  "valueConstant": null
                 }
               ],
               "Actions": null,
@@ -250,13 +243,6 @@
                   "value": "-10",
                   "set": false,
                   "valueConstant": null
-                },
-                {
-                  "typeString": "System.Int32",
-                  "name": "26_Alpha",
-                  "value": "1",
-                  "set": false,
-                  "valueConstant": null
                 }
               ],
               "Actions": null,
@@ -318,13 +304,6 @@
                   "typeString": "System.Int32",
                   "name": "Morale",
                   "value": "-10",
-                  "set": false,
-                  "valueConstant": null
-                },
-                {
-                  "typeString": "System.Int32",
-                  "name": "26_Alpha",
-                  "value": "1",
                   "set": false,
                   "valueConstant": null
                 }
@@ -431,15 +410,7 @@
                 "tagSetSourceFile": "",
                 "items": []
               },
-              "Stats": [
-                {
-                  "typeString": "System.Int32",
-                  "name": "26_Alpha",
-                  "value": "1",
-                  "set": false,
-                  "valueConstant": null
-                }
-              ],
+              "Stats": null,
               "Actions": null,
               "ForceEvents": null,
               "TemporaryResult": false,
@@ -524,15 +495,7 @@
                 "tagSetSourceFile": "",
                 "items": []
               },
-              "Stats": [
-                {
-                  "typeString": "System.Int32",
-                  "name": "26_Alpha",
-                  "value": "1",
-                  "set": false,
-                  "valueConstant": null
-                }
-              ],
+              "Stats": null,
               "Actions": null,
               "ForceEvents": null,
               "TemporaryResult": false,
@@ -706,13 +669,6 @@
                   "value": "1",
                   "set": false,
                   "valueConstant": "[rep_gain_small]"
-                },
-                {
-                  "typeString": "System.Int32",
-                  "name": "26_Alpha",
-                  "value": "1",
-                  "set": false,
-                  "valueConstant": null
                 }
               ],
               "Actions": null,
@@ -807,13 +763,6 @@
                   "value": "-2",
                   "set": false,
                   "valueConstant": "[rep_loss_medium]"
-                },
-                {
-                  "typeString": "System.Int32",
-                  "name": "26_Alpha",
-                  "value": "1",
-                  "set": false,
-                  "valueConstant": null
                 }
               ],
               "Actions": null,
@@ -900,13 +849,6 @@
                   "value": "2",
                   "set": false,
                   "valueConstant": "[rep_gain_medium]"
-                },
-                {
-                  "typeString": "System.Int32",
-                  "name": "26_Alpha",
-                  "value": "1",
-                  "set": false,
-                  "valueConstant": null
                 }
               ],
               "Actions": null,
