Diff settings pass 2, mainly tooltip updates + TBM miss radius lowered

--- a/Core/IRTweaks/Menus/CareerDifficultySettings.json
+++ b/Core/IRTweaks/Menus/CareerDifficultySettings.json
@@ -537,7 +537,7 @@
       "Name": "Contract Payment",
       "TelemetryEventName": "",
       "UIOrder": 7,
-      "Tooltip": "This setting controls the amount of C-Bills paid by contracts across the entire game. Adjust this setting to make the economic gameplay more or less forgiving.",
+      "Tooltip": "This setting controls base payout value of contracts, it scales with contract difficulty and will have a big impact throughout the entire game. Adjust this setting to make the economic gameplay more or less forgiving.",
       "Enabled": true,
       "Visible": true,
       "Toggle": false,
@@ -546,7 +546,7 @@
       "Options": [
         {
           "ID": "diff_CP_easy",
-          "Name": "Generous",
+          "Name": "Generous (150%)",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
           "CareerScoreModifier": -0.5,
@@ -560,7 +560,7 @@
         },
         {
           "ID": "diff_CP_med",
-          "Name": "Normal",
+          "Name": "Normal (100%)",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
           "CareerScoreModifier": 0.25,
@@ -574,7 +574,7 @@
         },
         {
           "ID": "diff_CP_hard",
-          "Name": "Stingy",
+          "Name": "Stingy (67%)",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
           "CareerScoreModifier": 0.5,
@@ -588,7 +588,7 @@
         },
         {
           "ID": "diff_CP_superhard",
-          "Name": "Cheapskate",
+          "Name": "Cheapskate (50%)",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
           "CareerScoreModifier": 0.75,
@@ -607,7 +607,7 @@
       "Name": "Salvage",
       "TelemetryEventName": "",
       "UIOrder": 8,
-      "Tooltip": "This setting changes the amount of salvage you may obtain from negotiation. Adjust this setting to make the economic gameplay more or less forgiving.",
+      "Tooltip": "This setting changes the amount of salvage you may obtain from negotiation. With Generous you can expect 1 extra priority and random pick from most contracts, at stingy you can expect 3 less random picks. Adjust this setting to make the economic gameplay more or less forgiving.",
       "Enabled": true,
       "Visible": true,
       "Toggle": false,
@@ -647,7 +647,7 @@
           "Name": "Stingy",
           "TelemetryEventDesc": "",
           "DifficultyValue": 1,
-          "CareerScoreModifier": 0.75,
+          "CareerScoreModifier": 0.5,
           "DifficultyConstants": [
             {
               "ConstantType": "Finances",
@@ -738,7 +738,7 @@
       "Visible": true,
       "Toggle": false,
       "StartOnly": false,
-      "DefaultIndex": 0,
+      "DefaultIndex": 1,
       "Options": [
         {
           "ID": "diff_CMD_easy",
@@ -794,7 +794,7 @@
       "Visible": true,
       "Toggle": false,
       "StartOnly": false,
-      "DefaultIndex": 5,
+      "DefaultIndex": 9,
       "Options": [
         {
           "ID": "diff_Ronin_only",
@@ -1108,10 +1108,10 @@
     },
     {
       "ID": "diff_pilotProgression",
-      "Name": "MechWarrior Progression",
+      "Name": "Pilot XP Per Mission",
       "TelemetryEventName": "",
       "UIOrder": 13,
-      "Tooltip": "This setting controls the amount of experience MechWarriors gain after each mission. Change this setting to adjust the rate at which MechWarriors improve their stats and gain new skills.",
+      "Tooltip": "This setting controls base contract experience income, this base value is then multiplied by the difficulty rating of contracts. Change this setting to adjust how much XP each mission is worth.",
       "Enabled": true,
       "Visible": true,
       "Toggle": false,
@@ -1120,7 +1120,7 @@
       "Options": [
         {
           "ID": "diff_PP_fast",
-          "Name": "Fast",
+          "Name": "Fast (350)",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
           "CareerScoreModifier": -0.2,
@@ -1134,7 +1134,7 @@
         },
         {
           "ID": "diff_PP_easy",
-          "Name": "Normal",
+          "Name": "Normal (300)",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
           "CareerScoreModifier": -0.1,
@@ -1148,7 +1148,7 @@
         },
         {
           "ID": "diff_PP_med",
-          "Name": "Slow",
+          "Name": "Slow (250)",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
           "CareerScoreModifier": 0,
@@ -1162,7 +1162,7 @@
         },
         {
           "ID": "diff_PP_hard",
-          "Name": "Very Slow",
+          "Name": "Very Slow (200)",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
           "CareerScoreModifier": 0,
@@ -1181,7 +1181,7 @@
       "Name": "MechWarrior Exponent",
       "TelemetryEventName": "",
       "UIOrder": 14,
-      "Tooltip": "This setting controls the exponent of raising XP Cost per Level. <color=#F79B26>LevelCost=(Potential Level,Exponent)*Multiplier.</color>",
+      "Tooltip": "This setting controls the scaling increase in Skill Rank Costs, increasing this will slow Pilot progression by increasing the cost of each skill rank. As Slow/Very Slow/Insane will roughly 2x/4x/10x the cost of Rank 10, Use this setting with caution. <color=#F79B26>LevelCost=(Potential Level,Exponent)*Multiplier.</color>",
       "Enabled": true,
       "Visible": true,
       "Toggle": false,
@@ -1468,43 +1468,43 @@
       "Options": [
         {
           "ID": "diff_SM_supereasy",
-          "Name": "6580000",
+          "Name": "10000000",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
-          "CareerScoreModifier": -0.1,
+          "CareerScoreModifier": -0.15,
           "DifficultyConstants": [
             {
               "ConstantType": "Story",
               "ConstantName": "StartingCBills",
-              "ConstantValue": "6580000"
+              "ConstantValue": "10000000"
             }
           ]
         },
         {
           "ID": "diff_SM_easy",
-          "Name": "4080000",
+          "Name": "7500000",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
-          "CareerScoreModifier": -0.07,
+          "CareerScoreModifier": -0.10,
           "DifficultyConstants": [
             {
               "ConstantType": "Story",
               "ConstantName": "StartingCBills",
-              "ConstantValue": "4080000"
+              "ConstantValue": "7500000"
             }
           ]
         },
         {
           "ID": "diff_SM_medium",
-          "Name": "3210000",
+          "Name": "5000000",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
-          "CareerScoreModifier": -0.03,
+          "CareerScoreModifier": -0.05,
           "DifficultyConstants": [
             {
               "ConstantType": "Story",
               "ConstantName": "StartingCBills",
-              "ConstantValue": "3210000"
+              "ConstantValue": "5000000"
             }
           ]
         },
@@ -1524,7 +1524,7 @@
         },
         {
           "ID": "diff_SM_veryhard",
-          "Name": "1800000",
+          "Name": "In Debt",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
           "CareerScoreModifier": 0,
@@ -1532,7 +1532,7 @@
             {
               "ConstantType": "Story",
               "ConstantName": "StartingCBills",
-              "ConstantValue": "1800000"
+              "ConstantValue": "10000"
             }
           ]
         }
@@ -1552,7 +1552,7 @@
       "Options": [
         {
           "ID": "diff_MBAY_quick",
-          "Name": "Fastest",
+          "Name": "Quick",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
           "CareerScoreModifier": -0.2,
@@ -1611,7 +1611,7 @@
         },
         {
           "ID": "diff_MBAY_Normal",
-          "Name": "Fast",
+          "Name": "Normal",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
           "CareerScoreModifier": -0.1,
@@ -1670,7 +1670,7 @@
         },
         {
           "ID": "diff_MBAY_Hard",
-          "Name": "Normal",
+          "Name": "Hard",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
           "CareerScoreModifier": 0,
@@ -1729,7 +1729,7 @@
         },
         {
           "ID": "diff_MBAY_VeryHard",
-          "Name": "Hard",
+          "Name": "Very Hard",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
           "CareerScoreModifier": 0.1,
@@ -1870,7 +1870,7 @@
       "Options": [
         {
           "ID": "diff_MBAYC_quick",
-          "Name": "Cheap",
+          "Name": "Cheap (50%)",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
           "CareerScoreModifier": -0.25,
@@ -1934,7 +1934,7 @@
         },
         {
           "ID": "diff_MBAYC_Normal",
-          "Name": "Normal",
+          "Name": "Normal (100%)",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
           "CareerScoreModifier": 0,
@@ -1998,7 +1998,7 @@
         },
         {
           "ID": "diff_MBAYC_Hard",
-          "Name": "Expensive",
+          "Name": "Expensive (200%)",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
           "CareerScoreModifier": 0.25,
