--- a/Core/IRTweaks/Menus/CareerDifficultySettings.json
+++ b/Core/IRTweaks/Menus/CareerDifficultySettings.json
@@ -1670,7 +1670,7 @@
         },
         {
           "ID": "diff_MBAY_Hard",
-          "Name": "Hard",
+          "Name": "Slow",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
           "CareerScoreModifier": 0,
@@ -1729,7 +1729,7 @@
         },
         {
           "ID": "diff_MBAY_VeryHard",
-          "Name": "Very Hard",
+          "Name": "Very Slow",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
           "CareerScoreModifier": 0.1,
@@ -1798,11 +1798,11 @@
       "Visible": true,
       "Toggle": false,
       "StartOnly": false,
-      "DefaultIndex": 2,
+      "DefaultIndex": 1,
       "Options": [
         {
           "ID": "diff_MBAY_quick",
-          "Name": "Easy",
+          "Name": "Quick (60%)",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
           "CareerScoreModifier": -0.3,
@@ -1816,7 +1816,7 @@
         },
         {
           "ID": "diff_MBAY_Normal",
-          "Name": "Normal",
+          "Name": "Normal (100%)",
           "DifficultyValue": 0,
           "CareerScoreModifier": 0,
           "DifficultyConstants": [
@@ -1829,7 +1829,7 @@
         },
         {
           "ID": "diff_MBAY_Hard",
-          "Name": "Hard",
+          "Name": "Slow (150%)",
           "DifficultyValue": 0,
           "CareerScoreModifier": 0.15,
           "DifficultyConstants": [
@@ -1842,7 +1842,7 @@
         },
         {
           "ID": "diff_MBAY_VeryHard",
-          "Name": "VeryHard",
+          "Name": "Very Slow (200%)",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
           "CareerScoreModifier": 0.3,
