Montly Upkeep Selection Rework
The monthly budget option have been change to modify your current med/mechtech value, instead of just providing a flat buff.
This should let the budget options provide effects all career long, both positive and negative.
Some Argo upgrades have been updated reflect this change.

New Base Values, Values after fully upgraded argo in brackets.

Spartan = 40% (50%)
Restrictive = 60% (75%)
Normal = 100%
Generous - 110% (125%)
Extravagant - 120% (150%)

Medtech Upgrades

Medbay 2, 3
+0.05/+0.1 Generous
+0.15/+0.15 Extravagant

Hospital
+0.1 Spartan
+0.15 Restrictive

MechTech Upgrades

Mechbay 2/3
+0.05/+0.1 Generous
+0.15/+0.15 Extravagant

Automation 1/2
+0.05/+0.05 Spartan
+0.05/+0.10 Restrictive

--- a/Core/MechAffinity/settings.json
+++ b/Core/MechAffinity/settings.json
@@ -447,17 +447,33 @@
     ]
   },
   "monthlyTechSettings": {
-      "SpartanMedModifier": -2,
-      "RestrictedMedModifier": -1,
+      "SpartanMedModifier": 0,
+      "RestrictedMedModifier": 0,
       "NormalMedModifier": 0,
-      "GenerousMedModifier": 1,
-      "ExtravagantMedModifier": 2,
-      "SpartanMechModifier": -5,
-      "RestrictedMechModifier": -3,
+      "GenerousMedModifier": 0,
+      "ExtravagantMedModifier": 0,
+      "SpartanMechModifier": 0,
+      "RestrictedMechModifier": 0,
       "NormalMechModifier": 0,
-      "GenerousMechModifier": 2,
-      "ExtravagantMechModifier": 4,
-      "UiFontSize": 24
+      "GenerousMechModifier": 0,
+      "ExtravagantMechModifier": 0,
+      "UiFontSize": 24,
+      "UseEnhancedFormulas": true,
+      "ModifiersFirst": true,
+      "DefaultMedTechModifier": 0,
+      "DefaultMechTechModifier": 0,
+      "DefaultMedTechMultiplier": 0,
+      "DefaultMechTechMultiplier": 0,
+      "SpartanMedMultiplier": -0.6,
+      "RestrictedMedMultiplier": -0.4,
+      "NormalMedMultiplier": 0,
+      "GenerousMedMultiplier": 0.1,
+      "ExtravagantMedMultiplier": 0.2,
+      "SpartanMechMultiplier": -0.6,
+      "RestrictedMechMultiplier": -0.4,
+      "NormalMechMultiplier": 0,
+      "GenerousMechMultiplier": 0.1,
+      "ExtravagantMechMultiplier": 0.2
   },
   "pilotManagementSettings": {
     "roninBlacklistTag": "MA_BLACKLISTED",
